--- a/mu-template/trunk/after/template/vim.template
+++ b/mu-template/trunk/after/template/vim.template
@@ -12,6 +12,6 @@ VimL: let s:plugin = expand('%:p') =~ '/plugin'
 VimL: if s:ftplug | call s:Include('vim-ftplugin', 'vim/internals') | endif
 VimL: if s:alplug | call s:Include('vim-autoload-plugin', 'vim/internals') | endif
 VimL: if s:plugin | call s:Include('vim-plugin', 'vim/internals') | endif
-VimL: if !s:plugin ||!s:ftplug ||!alplug | call s:Include('vim-other-scripts', 'vim/internals') | endif
+VimL: if !s:plugin &&!s:ftplug &&!s:alplug | call s:Include('vim-other-scripts', 'vim/internals') | endif
 VimL: " let s:ftplug = CONFIRM("Is this script an ftplugin ?", "&Yes\n&No", s:ftplug)==1
 VimL: call s:Include('vim-footer', 'vim/internals')
