--- a/mu-template/trunk/after/template/vim/internals/vim-ftplugin.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-ftplugin.template
@@ -3,7 +3,7 @@ VimL: "«Vim» ft-plugins Template File, Luc Hermitte
 VimL: let s:filetype = matchstr(expand('%:p'), 'ftplugin/\zs.\{-}\ze\%(\.vim\|[_/\\]\)')
 " Buffer-local Definitions {{{1
 " Avoid local reinclusion {{{2
-if cp || (exists("b:loaded_ftplug_¡s:fn¡") && !exists('g:force_reload_ftplug_¡s:fn¡'))
+if &cp || (exists("b:loaded_ftplug_¡s:fn¡") && !exists('g:force_reload_ftplug_¡s:fn¡'))
   finish
 endif
 let b:loaded_ftplug_¡s:fn¡ = <+version+>
@@ -19,12 +19,12 @@ inoremap <buffer> <+keybinding+> <+action+>
 "------------------------------------------------------------------------
 " Local commands {{{2
 
-command -b -nargs=<++> <+CommandName+> <+Action+>
+command! -b -nargs=<++> <+CommandName+> <+Action+>
 
 "=============================================================================
 " Global Definitions {{{1
 " Avoid global reinclusion {{{2
-if cp || (exists("g:loaded_ftplug_¡s:fn¡") && !exists('g:force_reload_ftplug_¡s:fn¡'))
+if &cp || (exists("g:loaded_ftplug_¡s:fn¡") && !exists('g:force_reload_ftplug_¡s:fn¡'))
   let &cpo=s:cpo_save
   finish
 endif
