- mu-template:   Updated for lh-vim-lib v2.2.0   Vim template-files for autoload plugin, local vimrcs, and mkvba scripts enhanced   Use :SourceLocalVimrc to import project local settings before expanding templates

--- a/mu-template/trunk/after/template/c/internals/c-header-typical.template
+++ b/mu-template/trunk/after/template/c/internals/c-header-typical.template
@@ -2,7 +2,7 @@ VimL: " $Id$
 VimL: " C++ Typical Header File-Template, Luc Hermitte
 <+Include+>
 
-VimL: let s:ns = lh#option#Get('cpp_project_namespace', "<+namespace+>")
+VimL: let s:ns = lh#option#get('cpp_project_namespace', "<+namespace+>")
 namespace ¡s:ns¡ {
    <+Definitions here+>
 } // namespace ¡s:ns¡
