--- a/mu-template/trunk/after/template/vim/internals/vim-autoload-function.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-autoload-function.template
@@ -2,6 +2,6 @@ VimL: " $Id$
 VimL: "«Vim» autoload functions Template File, Luc Hermitte
 VimL: "
 VimL: " Obtain the autoload plugin full name
-VimL: let s:relpathname = lh#path#StripStart(expand('%:p:r'), &rtp)
+VimL: let s:relpathname = lh#path#strip_start(expand('%:p:r'), &rtp)
 VimL: let s:relpathname = matchstr(s:relpathname, '^\(after.\)\=autoload.\zs.*')
 VimL: let s:function_prefix = substitute(s:relpathname, '[/\\]', '#', 'g') . '#'
