--- a/mu-template/trunk/after/template/vim/internals/vim-autoload-plugin.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-autoload-plugin.template
@@ -8,4 +8,9 @@ set cpo&vim
 "------------------------------------------------------------------------
 VimL: call s:Include('vim-autoload-debug', 'vim/internals')
 
+"------------------------------------------------------------------------
+" ## Exported functions {{{1
+
+"------------------------------------------------------------------------
+" ## Internal functions {{{1
 
