- mu-template: s/cxxtext/cxxtest/

--- a/mu-template/trunk/after/template/cpptu-header.template
+++ b/mu-template/trunk/after/template/cpptu-header.template
@@ -1,7 +1,7 @@
 VimL: " $Id$
 VimL: "C++ CXXTest File-Template, Luc Hermitte
 VimL: let s:TUName = expand('%:t:r')
-#include <cxxtext/TestSuite.h>
+#include <cxxtest/TestSuite.h>
 
 class ¡s:TUName¡ : public CxxTest::TestSuite
 {
