- lh-map-tools: new optional dep. to Tom Link's StakeHolders plugins

--- a/mu-template/trunk/after/template/vim/function.template
+++ b/mu-template/trunk/after/template/vim/function.template
@@ -8,6 +8,7 @@ VimL: call s:Include('get-script-kind', 'vim/internals')
 VimL: let function_name = 's:'
 VimL: if s:alplug | call s:Include('vim-autoload-function', 'vim/internals') | endif
 VimL: "
+" Function: ¡s:function_prefix¡<+funcname+>(<+params+>) {{{<+3+>
 function! ¡s:function_prefix¡<+funcname+>(<+params+>)
 <++>
 endfunction
