--- a/mu-template/trunk/after/template/c/fori.template
+++ b/mu-template/trunk/after/template/c/fori.template
@@ -5,6 +5,6 @@ VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-for¡C_nl_before_bracket()¡(i=0; i!=<+MAX+> ; ++i)¡C_nl_before_curlyB()¡{
+for¡C_nl_before_bracket()¡(<+i+>=0; <+i+>!=<+MAX+> ; ++<+i+>)¡C_nl_before_curlyB()¡{
     <+code+>
 }<++>
