--- a/mu-template/trunk/after/template/xslt/xsl-if.template
+++ b/mu-template/trunk/after/template/xslt/xsl-if.template
@@ -2,7 +2,9 @@ VimL:" $Id$
 VimL:"{xsl:if} Template, Luc Hermitte, 30th Jul 2003
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = '¡'
+VimL: let s:marker_open  = '<+'
+VimL: let s:marker_close = '+>'
 VimL: let s:reindent = 1 
-<xsl:if test="¡Marker_Txt('condition')¡">
-¡Marker_Txt()¡
+<xsl:if test="<+condition+>">
+	<++>
 </xsl:if>
