- mu-template: (enhancements)   (*) When several template-files match a snippet name, the choice can be done with |ins-completion-menu| instead of |confirm()| box thanks to: g:mt_chooseWith. When using "complete" a hint is provided with each snippet.   (*) The list of options is displayed in a (toggle-) menu   (*) Break undo history just before the template is expanded -> |i_CTRL-g_u|   (*) Functions moved to autoload plugins

--- a/mu-template/trunk/after/template/c/do.template
+++ b/mu-template/trunk/after/template/c/do.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{do-while} Template-File, Luc Hermitte
+VimL:" hint: do { action } while (cond);
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
