--- a/mu-template/trunk/after/template/cpptu-header.template
+++ b/mu-template/trunk/after/template/cpptu-header.template
@@ -1,5 +1,6 @@
 VimL: " $Id$
 VimL: "C++ CXXTest File-Template, Luc Hermitte
+VimL:" hint: class UT : public CxxTest::TestSuite
 VimL: let s:TUName = expand('%:t:r')
 #include <cxxtest/TestSuite.h>
 
