--- a/mu-template/trunk/after/template/xslt/xsl-attribute.template
+++ b/mu-template/trunk/after/template/xslt/xsl-attribute.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{xsl:attribute} Template File, Luc Hermitte
+VimL:" hint: <xsl:attribut name="cond"></xsl:attribut>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1
