--- a/mu-template/trunk/after/template/c/if.template
+++ b/mu-template/trunk/after/template/c/if.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{if} Template-File, Luc Hermitte
+VimL:" hint: if (cond) { action }
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
