--- a/mu-template/trunk/after/template/c/main.template
+++ b/mu-template/trunk/after/template/c/main.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{main(){...}} Template-File, Luc Hermitte
+VimL:" hint: int main(argc, argv) { ... }
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
