--- a/mu-template/trunk/after/template/c/while.template
+++ b/mu-template/trunk/after/template/c/while.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{while} Template-File, Luc Hermitte
+VimL:" hint: while (cond) { action }
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
