--- a/mu-template/trunk/after/template/cppunit-header.template
+++ b/mu-template/trunk/after/template/cppunit-header.template
@@ -1,5 +1,6 @@
 VimL: " $Id$
 VimL: "C++ TU Header File-Template, Luc Hermitte
+VimL: " hint: class UT : CppUnit::TestFixture
 VimL: let s:TUName = expand('%:t:r')
 
 class ¡s:TUName¡ : public CppUnit::TestFixture
