--- a/mu-template/trunk/after/template/vim/autoload-debug.template
+++ b/mu-template/trunk/after/template/vim/autoload-debug.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:" ``VimL debug functions for autoload plugins'' File Template, Luc Hermitte <hermitte {at} free {dot} fr>
+VimL:" hint: debug function for autoload plugins
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1
