--- a/mu-template/trunk/after/template/xslt/xsl-for-each.template
+++ b/mu-template/trunk/after/template/xslt/xsl-for-each.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{xsl:for-each} Template File, Luc Hermitte
+VimL:" hint: <xsl:for-each select="XPath"></xsl:for-each>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
