--- a/mu-template/trunk/after/template/xslt/xsl-if.template
+++ b/mu-template/trunk/after/template/xslt/xsl-if.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{xsl:if} Template, Luc Hermitte, 30th Jul 2003
+VimL:" hint: <xsl:if test="condition"></xsl:if>
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = '¡'
 VimL: let s:marker_open  = '<+'
