--- a/mu-template/trunk/after/template/xslt/xsl-otherwise.template
+++ b/mu-template/trunk/after/template/xslt/xsl-otherwise.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{xsl:otherwise} Template File, Luc Hermitte
+VimL:" hint: <xsl:otherwise></xsl:otherwise>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
