--- a/mu-template/trunk/after/template/xslt/xsl-when.template
+++ b/mu-template/trunk/after/template/xslt/xsl-when.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:"{xsl:when} Template File, Luc Hermitte
+VimL:" hint: <xsl:when test="cond"></xsl:when>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
