--- a/cpp/trunk/after/template/cpp/class.template
+++ b/cpp/trunk/after/template/cpp/class.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:" C++ Class Template, Luc Hermitte
+VimL:" hint: Class Wizard (asks for class semantics)
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = '¡'
 VimL: let s:reindent = 1
