--- a/cpp/trunk/after/template/cpp/file-dox.template
+++ b/cpp/trunk/after/template/cpp/file-dox.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:" dox-file Template, Luc Hermitte
+VimL:" hint: /** @file ... */
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1
