--- a/cpp/trunk/after/template/cpp/fori.template
+++ b/cpp/trunk/after/template/cpp/fori.template
@@ -1,10 +1,11 @@
 VimL:" $Id$
 VimL:"{for int i=0...} Template-File, Luc Hermitte
+VimL:" hint: for (int i=0;i!=N;++i) { action }
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-for¡C_nl_before_bracket()¡(int i=0; i!=<+MAX+> ; ++i)¡C_nl_before_curlyB()¡{
+for¡C_nl_before_bracket()¡(<+int+> <+i+>=0; <+i+>!=<+MAX+> ; ++<+i+>)¡C_nl_before_curlyB()¡{
     <+code+>
 }<++>
