--- a/cpp/trunk/after/template/cpp/author-doxygen.template
+++ b/cpp/trunk/after/template/cpp/author-doxygen.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:" C++ Doxygen snippet for authors, Luc Hermitte
+VimL:" hint: @author
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = '¡'
 VimL: let s:reindent = 1
