--- a/cpp/trunk/after/template/cpp/bool-operator.template
+++ b/cpp/trunk/after/template/cpp/bool-operator.template
@@ -1,5 +1,6 @@
 VimL:" $Id$
 VimL:" bool-operator Template, Luc Hermitte
+VimL:" hint: safe bool operator
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1
