--- a/cpp/trunk/after/template/cpp/file-dox.template
+++ b/cpp/trunk/after/template/cpp/file-dox.template
@@ -7,12 +7,11 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL:"
-
 /**@ingroup g<+Projet+>
  * @file    ¡expand('%:t')¡
  * ¡CppDox_author()¡
  * @version ¡'$'¡Revision$
- * @since   Version <+1.0+>
+ * @since   Version ¡lh#option#get('ProjectVersion', '<+1.0+>')¡
+ * ¡'$'¡Id$
  */
-
 
