- mu-template: add "hint" line to template.template

--- a/mu-template/trunk/after/template/template.template
+++ b/mu-template/trunk/after/template/template.template
@@ -6,6 +6,7 @@ VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 ¡'VimL:" $'¡Id$
 ¡s:Comment('<+'.expand('%:t:r').'+>'.' File Template, '.Author(1).', '.DateStamp())¡
+¡s:Comment('hint: <+'.expand('%:t:r').'+>')¡
 ¡'VimL:'¡ let s:value_start = '¡'
 ¡'VimL:'¡ let s:value_start = '¡'
 ¡'VimL:'¡ let s:value_end   = s:value_start
