- mu-template: New feature Issue#36 : surrounding templates

--- a/mu-template/trunk/after/template/c/main.template
+++ b/mu-template/trunk/after/template/c/main.template
@@ -8,5 +8,5 @@ VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 int main (<+int argc, char **argv+>)
 {
-    <+code+>
+    ¡s:Surround(1, '<+code+>')¡
 }
