--- a/mu-template/trunk/after/template/vim/function.template
+++ b/mu-template/trunk/after/template/vim/function.template
@@ -11,5 +11,5 @@ VimL: if s:alplug | call s:Include('vim-autoload-function', 'vim/internals') | e
 VimL: "
 " Function: ¡s:function_prefix¡<+funcname+>(<+params+>) {{{<+3+>
 function! ¡s:function_prefix¡<+funcname+>(<+params+>)
-<++>
+  ¡s:Surround(1, '<+code+>')¡
 endfunction
