--- a/mu-template/trunk/after/template/c/do.template
+++ b/mu-template/trunk/after/template/c/do.template
@@ -7,5 +7,5 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 do¡C_nl_before_curlyB()¡{
-    <+code+>
-}¡C_nl_before_curlyB()¡while¡C_nl_before_bracket()¡(<+cond+>);<++>
+    ¡s:Surround(1, '<+code+>')¡
+}¡C_nl_before_curlyB()¡while¡C_nl_before_bracket()¡(¡s:Surround(2, '<+cond+>')¡);<++>
