--- a/mu-template/trunk/after/template/c/for.template
+++ b/mu-template/trunk/after/template/c/for.template
@@ -7,5 +7,5 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 for¡C_nl_before_bracket()¡(<+init+>;<+cond+>;<+iteration+>)¡C_nl_before_curlyB()¡{
-    <+code+>
+    ¡s:Surround(1, '<+code+>')¡
 }<++>
