--- a/mu-template/trunk/after/template/c/if.template
+++ b/mu-template/trunk/after/template/c/if.template
@@ -6,6 +6,6 @@ VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-if¡C_nl_before_bracket()¡(<+condition+>)¡C_nl_before_curlyB()¡{
-    <+code+>
+if¡C_nl_before_bracket()¡(¡s:Surround(2, '<+cond+>')¡)¡C_nl_before_curlyB()¡{
+    ¡s:Surround(1, '<+code+>')¡
 }<++>
