--- a/mu-template/trunk/after/template/template/reindent.template
+++ b/mu-template/trunk/after/template/template/reindent.template
@@ -1,11 +1,9 @@
 VimL:" $Id$
-VimL:" for File Template, Luc Hermitte, 12th Jan 2011
-VimL:" hint: for i in ist ; do ... ; done
+VimL:" reindent File Template, Luc Hermitte, 22nd Feb 2011
+VimL:" hint: VimL: let s:reindent=1
 VimL: let s:value_start = '¡'
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-for <+i+> in $<+list+> ; do
-    ¡s:Surround(1, '<+code+>')¡
-done
+¡'V'¡imL: let s:reindent     = 1
