--- a/mu-template/trunk/after/template/vim/foreach.template
+++ b/mu-template/trunk/after/template/vim/foreach.template
@@ -7,6 +7,6 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 for <+var+> in <+list+>
-	<+loop-code+>
+  ¡s:Surround(1, '<+code+>')¡
 endfor<++>
 
