--- a/cpp/trunk/after/template/cpp/fori.template
+++ b/cpp/trunk/after/template/cpp/fori.template
@@ -7,5 +7,5 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 for¡C_nl_before_bracket()¡(<+int+> <+i+>=0; <+i+>!=<+MAX+> ; ++<+i+>)¡C_nl_before_curlyB()¡{
-    <+code+>
+    ¡s:Surround(1, '<+code+>')¡
 }<++>
