--- a/cpp/trunk/after/template/cpp/singleton.template
+++ b/cpp/trunk/after/template/cpp/singleton.template
@@ -14,8 +14,8 @@ VimL:"
 /*===========================================================================*/
 /*===============================[ Class ¡s:clsname¡ ]==============================*/
 /*===========================================================================*/
-/**
- * @brief <+brief+>
+/**@ingroup g¡lh#option#get('dox_group', '<+Group+>')¡
+ * ¡g:CppDox_brief_snippet¡
  *
  * <+doc+>
  *
@@ -58,4 +58,3 @@ private:
 };<++>
 
 ¡g:CppDox_stuff_for_cpp_file¡
-
