--- a/cpp/trunk/after/template/cpp/group-dox.template
+++ b/cpp/trunk/after/template/cpp/group-dox.template
@@ -6,6 +6,7 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
+VimL: let s:reindent     = 1
 /**@name <+group-name+> */
 //@{
 <++>
