--- a/cpp/trunk/after/template/cpp/stream-inserter.template
+++ b/cpp/trunk/after/template/cpp/stream-inserter.template
@@ -1,6 +1,6 @@
 VimL:" $Id$
 VimL:" C++ stream-inserter (operator<<) Template, Luc Hermitte, 04th Jun 2004
-VimL:" hint: istream& operator<<(istream &, class-type)
+VimL:" hint: ostream& operator<<(ostream &, class-type)
 VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:direction   = 'o'
