- mu-template: tex/frac template updated to surround the selection

--- a/mu-template/trunk/after/template/tex/frac.template
+++ b/mu-template/trunk/after/template/tex/frac.template
@@ -6,4 +6,4 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-\frac{<++>}{<++>}<++>
+\frac{¡s:Surround(1,'<++>')¡}{<++>}<++>
